Made some changes in the style

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
       <meta charset="utf-8">
       <title>Rapper - Be a true rapper!</title>
       <link rel="stylesheet" href="css/main.css">
+      <link href='https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700' rel='stylesheet' type='text/css'>
     </head>
 
     <body>
       <h1 class="heading">Rapper</h1>
+      <p class="sub-heading">All the beats that you need to kill those rhymes !!!</p>
       <ul class="beats">
       </ul>
     </body>
